Move here header and version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+    <h1>Miniature Happiness ✨</h1>
     <div id="app"></div>
+    <p>v1.2.1</p>
     <script type="module" src="/src/main.js"></script>
 </body>
 
